deployment-scripts/staging/reelcruit-employer-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-employer-staging
  namespace: staging
  labels:
    app: reelcruit-employer-staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-employer-staging
  template:
    metadata:
      labels:
        app: reelcruit-employer-staging
    spec:
      containers:
        - name: reelcruit
          image:  reelcruitapp/reelcruit-employer-app:staging
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: reelcruit-employer-staging-svc
  namespace: staging
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: reelcruit-employer-staging
