deployment-scripts/staging/reelcruit-employer-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employer-fe-staging-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: staging.employer.reelcruit.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reelcruit-employer-staging-svc
            port:
              number: 3000
   - host: www.staging.employer.reelcruit.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: reelcruit-employer-staging-svc
             port:
               number: 3000
